# routes/api.php
@@ -18,12 +18,6 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::post('/tokens/create', function (Request $request) {
-    $token = $request->user()->createToken($request->token_name);
-
-    return ['token' => $token->plainTextToken];
-});
-
 Route::middleware('auth:sanctum')->group(function () {
     require __DIR__ . '/../app/Modules/Core/Routes/routes.php';
 });
